--- a/!base_config/config_transcoder.cfg
+++ b/!base_config/config_transcoder.cfg
@@ -1,6 +1,6 @@
 #File I/O
-InputBitstreamFile            : ".265"
-OutputBitstreamFile           : "_out.265"
+InputBitstreamFile            : ".bin"
+OutputBitstreamFile           : "_out.bin"
 
 #Trace file
 DecoderTraceFile              : "TraceDecTranscoder.txt"
@@ -12,3 +12,4 @@ MaxNumRemovedTwosPerTU        : 0
 VerboseLevel                  : 1
 PrintOutStats                 : 1
 CUNeibCtx					  : 0	
+
