--- a/!base_config/config_rewriter.cfg
+++ b/!base_config/config_rewriter.cfg
@@ -1,6 +1,6 @@
 #File I/O
 InputBitstreamFile            : ".bin"
-OutputBitstreamFile           : "out.bin"
+OutputBitstreamFile           : "_out.bin"
 
 #Trace file
 DecoderTraceFile              : "TraceDecRewriter.txt"
