operation modes added

--- a/!base_config/config_rewriter.cfg
+++ b/!base_config/config_rewriter.cfg
@@ -7,7 +7,7 @@ DecoderTraceFile              : "TraceDecRewriter.txt"
 EncoderTraceFile              : "TraceEncRewriter.txt"
 
 #Operation mode
-RewritingMode                 : 3       # 0=NALU level, 1=Headers decoding, 2=Full decoding, 3=Full unwinding, 4=Verify unwinding
+RewritingMode                 : ""       # 0=NALU level, 1=Headers decoding, 2=Full decoding, 3=Full unwinding, 4=Verify unwinding
 VerboseLevel                  : 0
 PrintOutStats                 : 1
 
