--- a/!base_config/config_rewriter.cfg
+++ b/!base_config/config_rewriter.cfg
@@ -5,9 +5,10 @@ OutputBitstreamFile           : "_out.bin"
 #Trace file
 DecoderTraceFile              : "TraceDecRewriter.txt"
 EncoderTraceFile              : "TraceEncRewriter.txt"
+EnableTraceFlush              : 0     
 
 #Operation mode
-RewritingMode                 : ""       # 0=NALU level, 1=Headers decoding, 2=Full decoding, 3=Full unwinding, 4=Verify unwinding
-VerboseLevel                  : 0
+VerboseLevel                  : 4
 PrintOutStats                 : 1
+RewritingMode                 : ""       # 0=NALU level, 1=Headers decoding, 2=Full decoding, 3=Full unwinding, 4=Verify unwinding
 
