--- a/!base_config/config_transcoder.cfg
+++ b/!base_config/config_transcoder.cfg
@@ -7,9 +7,9 @@ DecoderTraceFile              : "TraceDecTranscoder.txt"
 EncoderTraceFile              : "TraceEncTranscoder.txt"
 
 #Operation mode
-MaxNumRemovedOnesPerTU        : 1
-MaxNumRemovedTwosPerTU        : 0
 VerboseLevel                  : 1
 PrintOutStats                 : 1
-CUNeibCtx					  : 0	
+BottomRightContext			  : 0		
+MaxNumRemovedOnesPerTU        : 1
+MaxNumRemovedTwosPerTU        : 0	
 
